# AniTail

./: .gitignore  .gitmodules  DLNA_SUPPORT.md  README.md  README.md.rej  build.gradle.kts  build_errors.txt  gradle.properties  pr2719.patch  settings.gradle.kts  settings.gradle.kts.rej
.github/actions/setup-fftw/: action.yml
.github/scripts/: analyze_strings.py  remove_unused.py
.github/workflows/: build.yml  build.yml.rej  build_pr.yml  build_pr.yml.rej  publish_desktop_release.yml  release.yml  release.yml.rej
app/: build.gradle.kts  build.gradle.kts.rej  proguard-rules.pro  proguard-rules.pro.rej
app/schemas/com.anitail.music.db.InternalDatabase/: 21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  30.json
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.rej
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/vibrafp/lib/: vibra.sym  vibra_jni.cpp
app/src/main/res/drawable/: alphabet_cyrillic.xml  ic_cast.xml  ic_user_device.xml  image.xml  language_japanese_latin.xml  language_korean_latin.xml  play.xml  warning.xml  widget_background.xml  widget_control_button_bg.xml  widget_cover_bg.xml  widget_cover_mask.xml  widget_orb_control_button_bg.xml  (+7 more)
common/: build.gradle.kts
desktop/: build.gradle.kts  proguard-rules.pro
docs/: app.js  i18n.js  index.html  manifest.json  styles.css  sw.js
docs/locales/: en.json  es.json  it.json
gradle/: libs.versions.toml
innertube/: build.gradle.kts
kizzy/: build.gradle.kts
kugou/: build.gradle.kts
lrclib/: build.gradle.kts
simpmusic/: build.gradle.kts
web/locales/: fr.json
(+513 files in other folders)
